Make push URL easier to double-click to highlight.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
                 display: none;
             }
             #sessid {
-                display: block;
+                display: table;
             }
             #data {
                 border: 1px solid #ccc;
